--- a/responsive.htm
+++ b/responsive.htm
@@ -12,7 +12,7 @@
     <div class="container1">
         <div class="container">
             <form action="">
-                <label for="">Amount</label> 
+                <label for="">Money</label> 
                 <br>
                <input type="text" placeholder="NGN 825" part="">
                 <br>
